--- a/modules/static/style.css
+++ b/modules/static/style.css
@@ -3,6 +3,7 @@
 html {
   position: relative;
   min-height: 100%;
+  font-family: "Helvetica Neue", sans-serif !important;
 }
 body {
   /* Margin bottom by footer height */
@@ -16,4 +17,51 @@ body {
   line-height: 60px;
   text-align: center;
   background-color: #f5f5f5;
+}
+
+nav {
+  margin-top: 1rem;
+}
+
+.search {
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.search-input {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.auth-form {
+  padding-top: 5rem;
+}
+
+.flashes {
+  list-style: none;
+}
+
+.form-errors {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top:0.5rem;
+}
+
+.form-errors li {
+  padding-left: 0;
+  font-size: 80%;
+  font-weight: 400;
+}
+
+.nav-span {
+  display: block;
+    padding-top: .425rem;
+    padding-bottom: .425rem;
+}
+}
+
+#logo {
+  text-align: center;
+  padding-bottom: 3rem;
 }
