--- a/modules/templates/base.html
+++ b/modules/templates/base.html
@@ -17,23 +17,22 @@
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">MDBox</a>
   <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    {% if current_user.is_authenticated() %}
+    <li class="nav-item">
+      <a class="nav-link" href="/upload">Upload <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Features</a>
+      <a class="nav-link" href="/myuploads">My Uploads <span class="sr-only">(current)</span></a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Pricing</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-    {% if current_user.is_authenticated %}
+    {% endif %}
+    </ul>
+    <div class="pull-right">
+    <ul class="nav navbar-nav">
+    {% if current_user.is_authenticated() %}
      <li class="nav-item">
-      Hello {{ current_user.email }}
+      <span class="nav-span">Hi, {{ current_user.email }}!</span>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('security.logout') }}">Logout</a>
@@ -44,26 +43,16 @@
 {% endif %}
   </ul>
   </div>
+  </div>
 </nav>
 
-{%- with messages = get_flashed_messages(with_categories=true) -%}
-  {% if messages %}
-    <ul class=flashes>
-    {% for category, message in messages %}
-      <li class="{{ category }}">{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{%- endwith %}
-<ul>
 
-</ul>
   {% block content %}
   {% endblock %}
 </div>
 
 <footer class="footer">
-  <div class="container">A HealthHack Project.</div>
+  <div class="container">A Brisbane HealthHack Project.</div>
 </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
