--- a/modules/templates/security/login_user.html
+++ b/modules/templates/security/login_user.html
@@ -1,16 +1,35 @@
 {% extends "base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
+{% from "security/_macros.html" import render_field_with_errors %}
 
 {% block content %}
-{% include "security/_messages.html" %}
-<h1>Custom Login Form</h1>
-<form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
-  {{ login_user_form.hidden_tag() }}
-  {{ render_field_with_errors(login_user_form.email) }}
-  {{ render_field_with_errors(login_user_form.password) }}
-  {{ render_field_with_errors(login_user_form.remember) }}
-  {{ render_field(login_user_form.next) }}
-  {{ render_field(login_user_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 auth-form login-form">
+  <div id="logo">
+    <img src="{{ url_for('static', filename='images/mddb.png') }}" alt="MDDB" width="200">  
+  </div>
+{%- with messages = get_flashed_messages(with_categories=true) -%}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">
+      <strong>Ooops!</strong> {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+{%- endwith %}
+    <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
+      {{ login_user_form.hidden_tag() }}
+      {{ render_field_with_errors(login_user_form.email) }}
+      {{ render_field_with_errors(login_user_form.password) }}
+      <fieldset class="form-group">
+        <label class="c-input c-checkbox" for="remember">
+          <input type="checkbox" name="remember" id="remember">
+          <span class="c-indicator"></span>
+          Remember Me
+        </label>
+      </fieldset>
+      <button type="submit" class="btn btn-primary">Login</button>
+
+    </form>
+  </div>
+</div>
 {% endblock %}
