--- a/modules/templates/index.html
+++ b/modules/templates/index.html
@@ -7,12 +7,12 @@
     <div id="logo">
         <img src="{{ url_for('static', filename='images/mddb.png') }}" alt="MDDB" width="200">  
     </div>
-      <div class="form-group search-input">
-        <!-- <img style="height: 24px;" src="{{ url_for('static', filename='bower_components/open-iconic/svg/magnifying-glass.svg') }}" alt="icon name"> -->
-        <input type="text" class="form-control form-control-lg"/>
-      </div>
-      <button type="submit" class="btn btn-primary">Search</button>
-    </div>
+      <form action="/" method="POST" class="form-group search-input">
+        <input type="text" name="search" class="form-control form-control-lg"/>
+       <br/>
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
   </div>
+</div>
 </div>
 {% endblock %}
